<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/splash_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/calibri"
            android:text="@string/title_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40dp"
            android:textStyle="normal|bold" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/link_porcelain"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginBottom="100dp"
            app:SpinKit_Color="@color/plaid_white" />

        <TextView
            android:id="@+id/link_porcelain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/term_layout"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/title_poilcy"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/term_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/content_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="5sp"
                android:layout_marginRight="5sp"
                android:gravity="bottom"
                android:text="@string/content_term"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/content_poilcy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/content_term"
                android:layout_marginBottom="5sp"
                android:gravity="bottom"
                android:text="@string/content_poilcy"
                android:textColor="@android:color/white"
                android:textSize="14dp" />
        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>