<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MoreInfoActivity"
    tools:ignore="HardcodedText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RelativeLayout
                    android:id="@+id/headerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/reports_header_bk"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp">

<!--                    <RelativeLayout-->
<!--                        android:id="@+id/menu_view"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content">-->

<!--                        <ImageView-->
<!--                            android:id="@+id/menu_btn"-->
<!--                            android:layout_width="32dp"-->
<!--                            android:layout_height="32dp"-->
<!--                            android:layout_alignParentRight="true"-->
<!--                            android:onClick="showPopup"-->
<!--                            android:src="@drawable/ic_more_vert_48" />-->
<!--                    </RelativeLayout>-->

                    <ImageView
                        android:id="@+id/bg_logo"
                        style="@style/reportContentText"
                        android:src="@drawable/icon_app"
                        app:tint="@color/plaid_white" />

                    <TextView
                        style="@style/viewParent.headerText"
                        android:layout_below="@id/bg_logo"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="70dp"
                        android:text="@string/app_name"
                        android:textColor="@color/plaid_white" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="140dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:cardBackgroundColor="@color/plaid_white"
                        app:cardCornerRadius="8dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="8dp"
                                    android:fontFamily="@font/calibri"
                                    android:text="@string/more_info_title_1"
                                    android:textAlignment="center"
                                    android:textColor="#202022"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_1"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="8dp"
                                    android:fontFamily="@font/calibri"
                                    android:text="@string/more_info_title_2"
                                    android:textAlignment="center"
                                    android:textColor="#202022"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_2"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_3"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_4"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_5"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_3"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_6"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_7"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_3"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/more_info_content_8"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/more_close_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="100"
                            android:layout_marginRight="30dp"
                            android:layout_marginLeft="30dp"
                            android:paddingVertical="15dp"
                            android:textAllCaps="false"
                            android:text="@string/close"
                            />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>