<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorpink"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/calibri"
                        android:text="@string/welcome_title"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/txtLieuPromo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/total_referrals_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/calibri"
                        android:text="@string/terms_content"
                        android:textSize="16sp"
                        android:textColor="@color/plaid_white"
                        android:textAlignment="center"/>

                </LinearLayout>

<!--                <ScrollView android:layout_width="fill_parent"-->
<!--                    android:layout_height="250dp"-->
<!--                    android:id="@+id/scrollTxtDescription"-->
<!--                    android:layout_below="@id/txtLieuPromo1">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:id="@+id/layoutTxtDescription"-->
<!--                        android:orientation="vertical"-->
<!--                        tools:ignore="WebViewLayout">-->

<!--                        <WebView-->
<!--                            android:id="@+id/terms_web"-->
<!--                            android:layout_width="fill_parent"-->
<!--                            android:layout_height="250dp"-->
<!--                            android:layout_marginTop="10dp"-->
<!--                            android:layout_marginBottom="8dp"-->
<!--                            android:padding="0dp"-->
<!--                            android:scrollbars="vertical"-->
<!--                            android:nestedScrollingEnabled="true"-->
<!--                            android:fadeScrollbars="true"-->
<!--                            android:fontFamily="@font/calibri"-->
<!--                            android:textSize="20sp"-->
<!--                            android:textColor="@color/plaid_white"-->
<!--                            android:textAlignment="center">-->
<!--                        </WebView>-->
<!--                    </LinearLayout>-->
<!--                </ScrollView>-->
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <WebView
                        android:id="@+id/terms_web"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp"
                        android:padding="0dp"
                        android:scrollbars="vertical"
                        android:nestedScrollingEnabled="true"
                        android:fadeScrollbars="true"
                        android:fontFamily="@font/calibri"
                        android:textSize="20sp"
                        android:textColor="@color/plaid_white"
                        android:textAlignment="center">
                    </WebView>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/terms_checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_checkbox"
                        android:textColor="@color/plaid_white"
                        android:theme="@style/CheckBox"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">
                    <Button
                        android:id="@+id/connect_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="90"
                        android:layout_marginRight="10dp"
                        android:paddingVertical="15dp"
                        android:backgroundTint="@color/colorAccent"
                        android:textAllCaps="false"
                        android:text="@string/connect_bank_button"
                        android:textColor="@color/plaid_white"
                        app:backgroundTint="@color/colorAccent"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>